Use padding to avoid overflow.

--- a/AppWithSidePanel.css
+++ b/AppWithSidePanel.css
@@ -77,5 +77,5 @@
 }
 
 .AppWelcome {
-  margin-top: 25%;
+  padding-top: 25%;
 }
